kubernetes-manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
  namespace: my-namespace
  labels:
    name: my-app
spec:
  selector:
      matchLabels:
        name: my-app
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        name: my-app
    spec:
      containers:
        - image: nginx
          name: my-app
          imagePullPolicy: Always
