kubernetes-manifests/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: my-service
  namespace: my-namespace
spec:
  selector:
    name: my-app
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
